--- a/src/pages/sport-list/sport-list.html
+++ b/src/pages/sport-list/sport-list.html
@@ -5,10 +5,13 @@
 </ion-header>
 
 <ion-content>
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
     <ion-list>
         <ion-item-sliding *ngFor="let item of soprtList">
             <ion-item>
-                <font style="color:gray">时间:</font> {{item.sportDate}} <span><font style="color:gray"> 运动时间：</font>{{item.sportTime}}秒</span>
+                <font style="color:gray">时间:</font> {{item.sportDate}} <span><font style="color:gray"> 运动时间：</font>{{item.sportTime | intToTime}}</span>
             </ion-item>
             <ion-item-options>
                 <button ion-button color="primary" (click)="archive()">删除</button>
@@ -16,5 +19,15 @@
         </ion-item-sliding>
 
     </ion-list>
+
+    <ion-fab right bottom>
+        <button ion-fab color="primary" mini><ion-icon name="ios-add"></ion-icon></button>
+        <ion-fab-list side="top">
+            <button ion-fab><ion-icon color="primary" name="logo-facebook"></ion-icon></button>
+            <button ion-fab><ion-icon color="primary" name="logo-twitter"></ion-icon></button>
+            <button ion-fab><ion-icon color="primary" name="logo-vimeo"></ion-icon></button>
+            <button ion-fab><ion-icon color="primary" name="logo-googleplus"></ion-icon></button>
+        </ion-fab-list>
+    </ion-fab>
 
 </ion-content>
