--- a/src/pages/sport-list/sport-list.html
+++ b/src/pages/sport-list/sport-list.html
@@ -6,27 +6,29 @@
 
 <ion-content>
     <ion-refresher (ionRefresh)="doRefresh($event)">
-        <ion-refresher-content></ion-refresher-content>
+        <ion-refresher-content refreshingSpinner="crescent"></ion-refresher-content>
     </ion-refresher>
     <ion-list>
         <ion-item-sliding *ngFor="let item of soprtList">
             <ion-item>
-                <font style="color:gray">时间:</font> {{item.sportDate}} <span><font style="color:gray"> 运动时间：</font>{{item.sportTime | intToTime}}</span>
+                <ion-thumbnail item-start>
+                    <img src="assets/heardImg/2.jpg">
+                </ion-thumbnail>
+                <h2>{{item.sportTime | intToTime}}</h2>
+                <p>{{item.sportDate}}</p>
+                <button ion-button clear item-end>查看</button>
             </ion-item>
             <ion-item-options>
-                <button ion-button color="primary" (click)="archive()">删除</button>
+                <button ion-button color="danger" (click)="delete(item)">删除</button>
             </ion-item-options>
         </ion-item-sliding>
-
     </ion-list>
-
     <ion-fab right bottom>
-        <button ion-fab color="primary" mini><ion-icon name="ios-add"></ion-icon></button>
+        <button ion-fab color="life" mini><ion-icon name="ios-add"></ion-icon></button>
         <ion-fab-list side="top">
-            <button ion-fab><ion-icon color="primary" name="logo-facebook"></ion-icon></button>
-            <button ion-fab><ion-icon color="primary" name="logo-twitter"></ion-icon></button>
-            <button ion-fab><ion-icon color="primary" name="logo-vimeo"></ion-icon></button>
-            <button ion-fab><ion-icon color="primary" name="logo-googleplus"></ion-icon></button>
+            <button ion-fab><ion-icon color="life" name="ios-mail"></ion-icon></button>
+            <button ion-fab><ion-icon color="life" name="ios-bicycle"></ion-icon></button>
+            <button ion-fab><ion-icon color="life" name="ios-alarm"></ion-icon></button>
         </ion-fab-list>
     </ion-fab>
 
