--- a/src/pages/clickPage/sport-list/sport-list.html
+++ b/src/pages/clickPage/sport-list/sport-list.html
@@ -1,11 +1,11 @@
 <ion-header>
     <ion-navbar color="life">
         <ion-title>运动列表</ion-title>
-        <ion-buttons end>
+        <!--<ion-buttons end>
             <button ion-button icon-only>
                 <ion-icon ios="ios-search" md="md-search"></ion-icon>
              </button>
-        </ion-buttons>
+        </ion-buttons>-->
     </ion-navbar>
 </ion-header>
 <ion-content>
@@ -33,8 +33,8 @@
     <ion-fab right bottom>
         <button ion-fab color="life" mini><ion-icon name="ios-add"></ion-icon></button>
         <ion-fab-list side="top">
-            <button ion-fab (click)="toDetail('mail')"><ion-icon color="life"   name="ios-mail"></ion-icon></button>
-            <button ion-fab (click)="toDetail('bicycle')"><ion-icon color="life"  name="ios-bicycle"></ion-icon></button>
+            <button ion-fab (click)="toDetail('ClickPage')"><ion-icon color="life"   name="ios-mail"></ion-icon></button>
+            <button ion-fab (click)="toDetail('TabsPage')"><ion-icon color="life"  name="ios-bicycle"></ion-icon></button>
             <button ion-fab (click)="toDetail('alarm')"><ion-icon color="life"  name="ios-alarm"></ion-icon></button>
         </ion-fab-list>
     </ion-fab>
