页面串联，登陆引导页面

--- a/src/pages/clickPage/click/click.html
+++ b/src/pages/clickPage/click/click.html
@@ -17,9 +17,9 @@
 
 
 <ion-content>
-    <audio src="assets/sound/boom.mp3" style="opacity:0" autoplay="true">
+    <!--<audio src="assets/sound/boom.mp3" style="opacity:0" autoplay="true">
     您的浏览器不支持 audio 标签。
-    </audio>
+    </audio>-->
     <section class="heard_time">
         <p>{{time | intToTime}}</p>
     </section>
