--- a/src/pages/homePage/main/main.html
+++ b/src/pages/homePage/main/main.html
@@ -12,7 +12,7 @@
             </div>
         </ion-scroll>
         <ion-buttons end style="min-width: 43px;text-align: center;">
-            <button ion-button icon-only color="life">
+            <button (click)="openMenu($event)" ion-button icon-only color="life">
              <ion-icon ios="ios-menu" md="md-menu"></ion-icon>
             </button>
         </ion-buttons>
