增加页面动画

--- a/src/pages/basicPage/login/login.html
+++ b/src/pages/basicPage/login/login.html
@@ -6,7 +6,7 @@
 -->
 <ion-content scroll="false" style=" background: -webkit-linear-gradient( top, white 0%, green 100%);">
     <section class="login">
-        <img src="../assets/icon/logo_green.png">
+        <img src="assets/icon/logo_green.png">
         <ion-list>
             <ion-item>
                 <ion-label color="life">
