--- a/src/pages/homePage/welcome/welcome.html
+++ b/src/pages/homePage/welcome/welcome.html
@@ -1,12 +1,12 @@
 <ion-slides pager (ionSlideDidChange)="slideChanged()">
     <ion-slide class="slide_01">
-        <p>思考时，要像一位智者；但讲话时，要像一位普通人。</p>
+        <p class="animated linear bounceInDown">思考时，要像一位智者；但讲话时，要像一位普通人。</p>
     </ion-slide>
     <ion-slide class="slide_02">
-        <p>你有信仰就年轻，疑惑就年老；有自信就年轻，畏惧就年老；有希望就年轻，绝望就年老；岁月使你皮肤起皱，但是失去了热忱，就损伤了灵魂。</p>
+        <p class="animated linear bounceInDown">你有信仰就年轻，疑惑就年老；有自信就年轻，畏惧就年老；有希望就年轻，绝望就年老；岁月使你皮肤起皱，但是失去了热忱，就损伤了灵魂。</p>
     </ion-slide>
     <ion-slide class="slide_03">
-        <p>天下最悲哀的人莫过于本身没有足以炫耀的优点，却又将其可怜的自卑感，以令人生厌的自大、自夸来掩饰。</p>
+        <p class="animated linear bounceInDown">天下最悲哀的人莫过于本身没有足以炫耀的优点，却又将其可怜的自卑感，以令人生厌的自大、自夸来掩饰。</p>
         <button class="we_btn" (click)="toMain()" ion-button color="life">立即开启</button>
     </ion-slide>
 </ion-slides>
