修改资源文件包含方式

--- a/src/pages/basicModule/error/error.html
+++ b/src/pages/basicModule/error/error.html
@@ -13,11 +13,11 @@
 </ion-header>-->
 <ion-content>
     <div class="error_heard">
-        <img src="assets/error/error.png" alt="">
+        <img src="assets/img/error/error.png" alt="">
     </div>
     <p class="error_p">哎呀，出错了！</p>
     <div class="error_line"></div>
-    <button (click)="back()" ion-button class="error_btn" color="light" style="background-image: url(assets/icon/return.png)">
+    <button (click)="back()" ion-button class="error_btn" color="light" style="background-image: url(assets/img/icon/return.png)">
       返回
     </button>
 
