--- a/src/pages/clickModule/sport-list/sport-list.html
+++ b/src/pages/clickModule/sport-list/sport-list.html
@@ -16,7 +16,7 @@
         <ion-item-sliding *ngFor="let item of sportList">
             <ion-item>
                 <ion-thumbnail item-start>
-                    <img src="assets/heardImg/2.jpg">
+                    <img src="assets/img/heardImg/2.jpg">
                 </ion-thumbnail>
                 <h2>{{item.sportTime | intToTime:2}}</h2>
                 <p>{{item.sportDate}}</p>
