--- a/src/pages/homeModule/first/first.html
+++ b/src/pages/homeModule/first/first.html
@@ -8,7 +8,7 @@
     <ion-toolbar color="life">
         <ion-buttons start>
             <button ion-button icon-only color="royal">
-               <img style="height: 100%;" src="assets/icon/logo.png" >
+               <img style="height: 100%;" src="assets/img/icon/logo.png" >
              </button>
         </ion-buttons>
         <ion-buttons end>
