--- a/src/pages/homeModule/main/main.html
+++ b/src/pages/homeModule/main/main.html
@@ -24,7 +24,7 @@
     </ion-scroll>-->
     <ion-card *ngFor="let item of personList">
 
-        <img class="animated linear bounceInDown" src="assets/one-piece/{{item.heard_img}}" />
+        <img class="animated linear bounceInDown" src="assets/img/one-piece/{{item.heard_img}}" />
 
         <ion-card-content>
             <ion-card-title>
