--- a/src/pages/basicModule/cloud/cloud.html
+++ b/src/pages/basicModule/cloud/cloud.html
@@ -14,20 +14,20 @@
 <ion-content>
     <div class="error_cloud" style="background-image: url(assets/image/cloud.png)"></div>
     <div class="error_rain">
-        <div style="animation: rain_action 2s 0s linear infinite ; background-image: url(assets/image/rain.png)"></div>
-        <div style="animation: rain_action 2s 1s linear infinite; background-image: url(assets/image/rain.png)"></div>
-        <div style="animation: rain_action 2s 0.3s linear infinite; background-image: url(assets/image/rain.png)"></div>
-        <div style="animation: rain_action 2s 0.6s linear infinite; background-image: url(assets/image/rain.png)"></div>
-        <div style="animation: rain_action 2s 0.2s linear infinite; background-image: url(assets/image/rain.png)"></div>
-        <div style="animation: rain_action 2s 0.9s linear infinite; background-image: url(assets/image/rain.png)"></div>
-        <div style="animation: rain_action 2s 1.2s linear infinite; background-image: url(assets/image/rain.png)"></div>
-        <div style="animation: rain_action 2s 0s linear infinite; background-image: url(assets/image/rain.png)"></div>
-        <div style="animation: rain_action 2s 1s linear infinite; background-image: url(assets/image/rain.png)"></div>
-        <div style="animation: rain_action 2s 0.3s linear infinite; background-image: url(assets/image/rain.png)"></div>
-        <div style="animation: rain_action 2s 0.6s linear infinite; background-image: url(assets/image/rain.png)"></div>
-        <div style="animation: rain_action 2s 0.2s linear infinite; background-image: url(assets/image/rain.png)"></div>
-        <div style="animation: rain_action 2s 0.9s linear infinite; background-image: url(assets/image/rain.png)"></div>
-        <div style="animation: rain_action 2s 1.2s linear infinite; background-image: url(assets/image/rain.png)"></div>
-        <div style="animation: rain_action 2s 0s linear infinite; background-image: url(assets/image/rain.png)"></div>
+        <div style="animation: rain_action 2s 0s linear infinite ; background-image: url(assets/img/rain.png)"></div>
+        <div style="animation: rain_action 2s 1s linear infinite; background-image: url(assets/img/rain.png)"></div>
+        <div style="animation: rain_action 2s 0.3s linear infinite; background-image: url(assets/img/rain.png)"></div>
+        <div style="animation: rain_action 2s 0.6s linear infinite; background-image: url(assets/img/rain.png)"></div>
+        <div style="animation: rain_action 2s 0.2s linear infinite; background-image: url(assets/img/rain.png)"></div>
+        <div style="animation: rain_action 2s 0.9s linear infinite; background-image: url(assets/img/rain.png)"></div>
+        <div style="animation: rain_action 2s 1.2s linear infinite; background-image: url(assets/img/rain.png)"></div>
+        <div style="animation: rain_action 2s 0s linear infinite; background-image: url(assets/img/rain.png)"></div>
+        <div style="animation: rain_action 2s 1s linear infinite; background-image: url(assets/img/rain.png)"></div>
+        <div style="animation: rain_action 2s 0.3s linear infinite; background-image: url(assets/img/rain.png)"></div>
+        <div style="animation: rain_action 2s 0.6s linear infinite; background-image: url(assets/img/rain.png)"></div>
+        <div style="animation: rain_action 2s 0.2s linear infinite; background-image: url(assets/img/rain.png)"></div>
+        <div style="animation: rain_action 2s 0.9s linear infinite; background-image: url(assets/img/rain.png)"></div>
+        <div style="animation: rain_action 2s 1.2s linear infinite; background-image: url(assets/img/rain.png)"></div>
+        <div style="animation: rain_action 2s 0s linear infinite; background-image: url(assets/img/rain.png)"></div>
     </div>
 </ion-content>
