--- a/src/pages/customModule/custom-add/custom-add.html
+++ b/src/pages/customModule/custom-add/custom-add.html
@@ -1,18 +1,31 @@
-<!--
-  Generated template for the CustomAddPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
     <ion-navbar color="life">
         <ion-title>新增客户</ion-title>
     </ion-navbar>
-
 </ion-header>
+<ion-content>
+    <section class="head_img">
+        <div tappable (click)="uploadHeard()">
+            <ion-icon color="life" name="camera"></ion-icon>
+        </div>
+    </section>
+    <div class="title_msg">
+        <ion-icon name="contact"></ion-icon> 基本信息
+    </div>
+    <ion-list>
+        <ion-item>
+            <ion-label fixed>名称</ion-label>
+            <ion-input type="text" placeholder="请输入姓名"></ion-input>
+        </ion-item>
 
+        <ion-item>
+            <ion-label>船队</ion-label>
+            <ion-select [(ngModel)]="personObj.fleet" cancelText="取消" okText="确定">
+                <ion-option value="">请选择</ion-option>
+                <ion-option color="life" *ngFor="let item of fleetCode" [value]="item.code">{{item.name}}</ion-option>
+            </ion-select>
+        </ion-item>
+    </ion-list>
 
-<ion-content padding>
-
+    <button ion-button (click)="save()">提交</button>
 </ion-content>
