修改popver 跳转方式(修复BUG) ****建议popver不做任何跳转页面操作*****

--- a/src/pages/homeModule/main/main.html
+++ b/src/pages/homeModule/main/main.html
@@ -9,7 +9,7 @@
     <ion-toolbar>
         <ion-scroll scrollbar-x="false" scrollX scrollbar-y="false" scrollY="false">
             <div class="scroll-item" [ngClass]="{'choosed':choosed === item.id}" (click)="chooseTab(item)" *ngFor="let item of tabsList">
-                {{item.text}}
+                <span tappable>{{item.text}}</span>
             </div>
         </ion-scroll>
         <ion-buttons end style="min-width: 43px;text-align: center;">
