directive 优化 键盘事件优化

--- a/src/pages/customModule/custom-add/custom-add.html
+++ b/src/pages/customModule/custom-add/custom-add.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar color="life" [hearBarColor]="'life'">
+    <ion-navbar color="life" hearBarColor>
         <ion-title>新增客户</ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="addCusFromContacts()">
