--- a/src/pages/basicModule/login/login.html
+++ b/src/pages/basicModule/login/login.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-content scroll="false" style=" background: -webkit-linear-gradient( top, white 0%, green 100%);">
+<ion-content hearBarColor scroll="false" style=" background-color: -webkit-linear-gradient( top, white 0%, green 100%)!important;">
     <section class="login">
         <img src="assets/img/icon/logo_green.png">
         <ion-list>
