--- a/src/pages/clickModule/click/click.html
+++ b/src/pages/clickModule/click/click.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
     <ion-navbar color="life">
-        <ion-title>打卡页面</ion-title>
+        <ion-title>运动计时</ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="presentPopover($event)">
                 <ion-icon name="more"></ion-icon>
