仿造支付宝页面

--- a/src/pages/basicModule/tabs/tabs.html
+++ b/src/pages/basicModule/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs tabbarPlacement="bottom">
     <ion-tab tabIcon="ios-home" [root]="mainRoot" tabTitle="首页"></ion-tab>
     <ion-tab tabIcon="ios-people" [root]="tab2Root" tabTitle="客户管理"></ion-tab>
     <ion-tab tabIcon="md-bookmarks" [root]="tab3Root" tabTitle="建议书"></ion-tab>
