--- a/src/pages/homeModule/proposal-home/proposal-home.html
+++ b/src/pages/homeModule/proposal-home/proposal-home.html
@@ -5,8 +5,8 @@
 </ion-header>
 <ion-content>
     <div class=" proposal_home">
-        <section>建议书列表</section>
-        <section>已完成建议书</section>
-        <section>未完成建议书</section>
+        <section><span>建议书列表</span> </section>
+        <section><span>已完成建议书</span></section>
+        <section><span>未完成建议书</span></section>
     </div>
 </ion-content>
