--- a/src/pages/homeModule/main/main.html
+++ b/src/pages/homeModule/main/main.html
@@ -1,52 +1,32 @@
-<!--
-  Generated template for the MainPage page.
+<!--<ion-header>
+    <ion-navbar color="life">
+        <ion-title>首页</ion-title>
+    </ion-navbar>
+</ion-header>-->
+<ion-content class="card-background-page" (ionScroll)="scrollHandler($event)">
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
-  tappable
--->
-<ion-header>
-    <ion-toolbar>
-        <ion-scroll scrollbar-x="false" scrollX scrollbar-y="false" scrollY="false">
-            <div class="scroll-item" [ngClass]="{'choosed':choosed === item.id}" (click)="chooseTab(item)" *ngFor="let item of tabsList">
-                <span tappable>{{item.text}}</span>
-            </div>
-        </ion-scroll>
-        <ion-buttons end style="min-width: 43px;text-align: center;">
-            <button (click)="openMenu($event)" ion-button icon-only color="life">
-             <ion-icon ios="ios-add-outline" md="ios-add-outline"></ion-icon>
-            </button>
-        </ion-buttons>
-    </ion-toolbar>
-</ion-header>
-
-<ion-content>
-    <!--<ion-scroll scrollX style="height:40px;">
-    </ion-scroll>-->
-    <ion-card *ngFor="let item of personList" (click)="toDetail(item)" tappable>
-
-        <img class="animated linear bounceInDown" src="{{item.imgUrl}}" />
-
-        <ion-card-content>
-            <ion-card-title>
-                {{item.name}}
-            </ion-card-title>
-            <p>
-                {{item.introduction}}
-            </p>
-        </ion-card-content>
-
-        <ion-item>
-            <ion-icon name='ios-bonfire' item-start style="color: #d03e84"></ion-icon>
-            人气
-            <ion-badge item-end color="life">{{item.charmNum}}</ion-badge>
-        </ion-item>
-
-        <ion-item>
-            <ion-icon name='ios-cog' item-start style="color: #55acee"></ion-icon>
-            战斗力
-            <ion-badge item-end color="life">{{item.ability}}</ion-badge>
-        </ion-item>
-
+    <ion-card>
+        <img src="assets/img/main/card-madison.png" />
+        <div class="card-title">São Paulo</div>
+        <div class="card-subtitle">41 Listings</div>
     </ion-card>
+
+    <ion-card>
+        <img src="assets/img/main/card-sf.png" />
+        <div class="card-title">Amsterdam</div>
+        <div class="card-subtitle">64 Listings</div>
+    </ion-card>
+
+    <ion-card>
+        <img src="assets/img/main/card-saopaolo.png" />
+        <div class="card-title">San Francisco</div>
+        <div class="card-subtitle">72 Listings</div>
+    </ion-card>
+
+    <ion-card>
+        <img src="assets/img/main/card-amsterdam.png" />
+        <div class="card-title ">Madison</div>
+        <div class="card-subtitle ">28 Listings</div>
+    </ion-card>
+
 </ion-content>
