ChangeDetectorRef的用法:数据刷新

--- a/src/pages/homeModule/main/main.html
+++ b/src/pages/homeModule/main/main.html
@@ -28,5 +28,25 @@
         <div class="card-title ">Madison</div>
         <div class="card-subtitle ">28 Listings</div>
     </ion-card>
+    <ion-card>
+        <img src="assets/img/main/card-amsterdam.png" />
+        <div class="card-title ">Madison</div>
+        <div class="card-subtitle ">28 Listings</div>
+    </ion-card>
+    <ion-card>
+        <img src="assets/img/main/card-amsterdam.png" />
+        <div class="card-title ">Madison</div>
+        <div class="card-subtitle ">28 Listings</div>
+    </ion-card>
+    <ion-card>
+        <img src="assets/img/main/card-amsterdam.png" />
+        <div class="card-title ">Madison</div>
+        <div class="card-subtitle ">28 Listings</div>
+    </ion-card>
+    <ion-fab *ngIf="showTab" right bottom>
+        <button (click)="toTop()" ion-fab color="light"><ion-icon name="ios-arrow-round-up-outline" ></ion-icon></button>
+    </ion-fab>
+
+
 
 </ion-content>
