封装一个建议的echart控件 外壳

--- a/src/pages/homeModule/main/main.html
+++ b/src/pages/homeModule/main/main.html
@@ -1,20 +1,14 @@
-<!--<ion-header>
+<ion-header style="display:none">
     <ion-navbar color="life">
         <ion-title>首页</ion-title>
     </ion-navbar>
-</ion-header>-->
+</ion-header>
 <ion-content class="card-background-page" (ionScroll)="scrollHandler($event)">
 
     <ion-card>
         <img src="assets/img/main/card-madison.png" />
         <div class="card-title">São Paulo</div>
         <div class="card-subtitle">41 Listings</div>
-    </ion-card>
-
-    <ion-card>
-        <img src="assets/img/main/card-sf.png" />
-        <div class="card-title">Amsterdam</div>
-        <div class="card-subtitle">64 Listings</div>
     </ion-card>
 
     <ion-card>
