--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
     <!-- The bundle js is generated during the build process -->
     <script src="build/main.js"></script>
     <script src="http://api.map.baidu.com/api?v=2.0&ak=zuDUu1qGxl88BLqbfMZ7irpro3Sz9XvL"></script>
-
+    <script src="./assets/lib/echart/echarts.js"></script>
 </body>
 
 </html>
