--- a/src/pages/homeModule/tool-home/tool-home.html
+++ b/src/pages/homeModule/tool-home/tool-home.html
@@ -19,15 +19,10 @@
     </ion-toolbar>
 </ion-header>
 <ion-content>
-    <!--<div style="border: 1px solid gainsboro;height: 240px;">
-        <video width="100%" height="100%" poster="img/train/movie_heard.png" style="background: gray;" controls preload>
-				<source src="assets/video/video.mp4" type="video/mp4">
-			</video>
-    </div>-->
     <ion-grid>
         <ion-row>
-            <ion-col *ngFor="let item of toolList" [ngStyle]="{'color': item.color}" col-4>
-                <ion-icon name="{{item.icon}}"></ion-icon><br><br>
+            <ion-col (click)="toModule(item)" *ngFor="let item of toolList,let i=index" [ngStyle]="{'color': item.color}" [ngClass]="{'col_border_top':i == 1|| i == 2|| i == 0,'col_border_left':i%3==0}" col-4>
+                <ion-icon name="{{item.icon}}"></ion-icon><br> <br>
                 <span>{{item.text}}</span>
             </ion-col>
         </ion-row>
