--- a/src/pages/toolModule/move/move.html
+++ b/src/pages/toolModule/move/move.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content auth>
     <div class="move" jdfdrag></div>
     <div style="width:100px;height:100px;background:blue" jdfdrag></div>
 </ion-content>
