--- a/src/pages/toolModule/chart/chart.html
+++ b/src/pages/toolModule/chart/chart.html
@@ -4,6 +4,9 @@
     </ion-navbar>
 </ion-header>
 <ion-content>
+    <div padding-vertical>
+        <canvas #chartBar height="200"></canvas>
+    </div>
     <charts [option]="option"></charts><br><br>
     <charts [option]="zoption"></charts><br><br>
     <charts [option]="loption"></charts><br><br>
